--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "pages:build": "opennextjs-cloudflare",
+    "pages:build": "opennextjs-cloudflare build",
     "preview": "npm run pages:build && wrangler pages dev .open-next/worker",
     "deploy": "npm run pages:build && wrangler pages deploy .open-next/worker"
   },
