--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint",
-    "pages:build": "opennextjs-cloudflare build",
-    "preview": "npm run pages:build && wrangler pages dev .open-next/worker",
-    "deploy": "npm run pages:build && wrangler pages deploy .open-next/worker"
+    "lint": "eslint"
   },
   "dependencies": {
     "next": "15.5.4",
